--- a/installer/build_args/light_argsx64.txt.in
+++ b/installer/build_args/light_argsx64.txt.in
@@ -1,6 +1,6 @@
 @@INSTALLER_PATH@@\wixobjx64\*.wixobj
 @@WIX_BIN_PATH@@\difxapp_x64.wixlib
--out ..\virtio-win-gtx64.msi
+-out ..\virtio-win-gt-x64.msi
 -nologo
 -sma
 -pedantic
