--- a/installer/build_args/light_argsx86.txt.in
+++ b/installer/build_args/light_argsx86.txt.in
@@ -1,6 +1,6 @@
 @@INSTALLER_PATH@@\wixobjx86\*.wixobj
 @@WIX_BIN_PATH@@\difxapp_x86.wixlib
--out ..\virtio-win-gtx86.msi
+-out ..\virtio-win-gt-x86.msi
 -nologo
 -sma
 -pedantic
