--- a/installer/build_args/candle_argsx64.txt.in
+++ b/installer/build_args/candle_argsx64.txt.in
@@ -3,6 +3,7 @@
 @@INSTALLER_PATH@@\Drivers\NetKVM\*.wxs
 @@INSTALLER_PATH@@\Drivers\pvpanic\*.wxs
 @@INSTALLER_PATH@@\Drivers\qemufwcfg\*.wxs
+@@INSTALLER_PATH@@\Drivers\qemupciserial\*.wxs
 @@INSTALLER_PATH@@\Drivers\qxldod\*.wxs
 @@INSTALLER_PATH@@\Drivers\viorng\*.wxs
 @@INSTALLER_PATH@@\Drivers\vioscsi\*.wxs
