Add vioinput driver
Signed-off-by: Gal Zaidman <gzaidman@redhat.com>

--- a/installer/build_args/candle_argsx64.txt.in
+++ b/installer/build_args/candle_argsx64.txt.in
@@ -5,6 +5,7 @@
 @@INSTALLER_PATH@@\Drivers\qemufwcfg\*.wxs
 @@INSTALLER_PATH@@\Drivers\qemupciserial\*.wxs
 @@INSTALLER_PATH@@\Drivers\qxldod\*.wxs
+@@INSTALLER_PATH@@\Drivers\vioinput\*.wxs
 @@INSTALLER_PATH@@\Drivers\viorng\*.wxs
 @@INSTALLER_PATH@@\Drivers\vioscsi\*.wxs
 @@INSTALLER_PATH@@\Drivers\vioserial\*.wxs
