--- a/installer/build_args/candle_argsx86.txt.in
+++ b/installer/build_args/candle_argsx86.txt.in
@@ -18,6 +18,6 @@
 -v
 -arch x86
 -fips
--ext "@@WIX_BIN_PATH@@\WixDifxAppExtension.dll"
--ext "@@WIX_BIN_PATH@@\WixUtilExtension.dll"
--ext "@@WIX_BIN_PATH@@\WixUIExtension.dll"
+-ext "@@WIX_BIN_PATH@@WixDifxAppExtension.dll"
+-ext "@@WIX_BIN_PATH@@WixUtilExtension.dll"
+-ext "@@WIX_BIN_PATH@@WixUIExtension.dll"
