--- a/virtio-win-drivers-installer/build_args/light_argsx64.txt.in
+++ b/virtio-win-drivers-installer/build_args/light_argsx64.txt.in
@@ -1,6 +1,6 @@
-"@@INSTALLER_PATH@@\wixobjx86\*.wixobj"
-"@@WIX_BIN_PATH@@difxapp_x86.wixlib"
--out ..\virtio-win-gt-x86.msi
+"@@INSTALLER_PATH@@\wixobjx64\*.wixobj"
+"@@WIX_BIN_PATH@@difxapp_x64.wixlib"
+-out virtio-win-gt-x64.msi
 -nologo
 -pedantic
 -v
