--- a/virtio-win-installers-bundler/Bundle.wxs.in
+++ b/virtio-win-installers-bundler/Bundle.wxs.in
@@ -17,44 +17,44 @@
         LocalizationFile="Resources/Theme.wxl"/>
     </BootstrapperApplicationRef>
 		<Chain>
-             <MsiPackage 
+             <MsiPackage
                 SourceFile="../virtio-win-drivers-installer/virtio-win-gt-x64.msi"
                 InstallCondition="VersionNT64"
                 EnableFeatureSelection="yes"
                 DisplayInternalUI="yes"
                 DisplayName="virtio-win-drivers"
                 Description="MSI to install virtio-win drivers for x64 systems"/>
-             <MsiPackage 
+             <MsiPackage
                 SourceFile="../virtio-win-drivers-installer/virtio-win-gt-x86.msi"
                 InstallCondition="NOT VersionNT64"
                 EnableFeatureSelection="yes"
                 DisplayInternalUI="yes"
                 DisplayName="virtio-win-drivers"
-                Description="MSI to install virtio-win drivers for x86 systems"/> 
-             <MsiPackage SourceFile="@@SPICE_DRIVER_PATH@@/QxlWddmDod_0.19.2.0_x64.msi"
+                Description="MSI to install virtio-win drivers for x86 systems"/>
+             <MsiPackage SourceFile="@@SPICE_DRIVER_86_MSI_PATH@@"
                 InstallCondition="VersionNT64"
                 DisplayName="spice-driver"/>
-             <MsiPackage SourceFile="@@SPICE_DRIVER_PATH@@/QxlWddmDod_0.19.2.0_x86.msi"
+             <MsiPackage SourceFile="@@SPICE_DRIVER_64_MSI_PATH@@"
                 InstallCondition="NOT VersionNT64"
-                DisplayName="spice-driver"/> 
-             <MsiPackage SourceFile="@@SPICE_VDAGENT_PATH@@/spice-vdagent-x64-0.10.0-2.msi"
+                DisplayName="spice-driver"/>
+             <MsiPackage SourceFile="@@SPICE_VDAGENT_64_MSI_PATH@@"
                 InstallCondition="VersionNT64"
                 DisplayName="spice-guest-agent"/>
-             <MsiPackage SourceFile="@@SPICE_VDAGENT_PATH@@/spice-vdagent-x86-0.10.0-2.msi"
+             <MsiPackage SourceFile="@@SPICE_VDAGENT_86_MSI_PATH@@"
                 InstallCondition="NOT VersionNT64"
-                DisplayName="spice-guest-agent"/> 
+                DisplayName="spice-guest-agent"/>
              <MsiPackage SourceFile="../ovirt-agent-installer/ovirt-guest-agent-x64.msi"
                 InstallCondition="VersionNT64 AND LocalInstallOvirtAgent"
-                DisplayName="ovirt-guest-agent"/> 
+                DisplayName="ovirt-guest-agent"/>
              <MsiPackage SourceFile="../ovirt-agent-installer/ovirt-guest-agent-x86.msi"
                 InstallCondition="NOT VersionNT64 AND LocalInstallOvirtAgent"
-                DisplayName="ovirt-guest-agent"/> 
-             <MsiPackage SourceFile="@@QEMU_GA_64_MSI_PATH@@/qemu-ga-x86_64.msi"
+                DisplayName="ovirt-guest-agent"/>
+             <MsiPackage SourceFile="@@QEMU_GA_64_MSI_PATH@@"
                 InstallCondition="VersionNT64"
-                DisplayName="qemu-guest-agent"/> 
-             <MsiPackage SourceFile="@@QEMU_GA_86_MSI_PATH@@/qemu-ga-i386.msi"
+                DisplayName="qemu-guest-agent"/>
+             <MsiPackage SourceFile="@@QEMU_GA_86_MSI_PATH@@"
                 InstallCondition="NOT VersionNT64"
-                DisplayName="qemu-guest-agent"/> 
+                DisplayName="qemu-guest-agent"/>
 		</Chain>
 	</Bundle>
 </Wix>
