add viofs to the project
Signed-off-by: Vadim Rozenfeld <vrozenfe@redhat.com>

--- a/virtio-win-drivers-installer/build_args/candle_argsx64.txt.in
+++ b/virtio-win-drivers-installer/build_args/candle_argsx64.txt.in
@@ -9,6 +9,7 @@
 @@INSTALLER_PATH@@\Drivers\vioscsi\*.wxs
 @@INSTALLER_PATH@@\Drivers\vioserial\*.wxs
 @@INSTALLER_PATH@@\Drivers\viostor\*.wxs
+@@INSTALLER_PATH@@\Drivers\viofs\*.wxs
 -out wixobjx64\
 -nologo
 -pedantic
