--- a/virtio-win-drivers-installer/build_args/candle_argsx86.txt.in
+++ b/virtio-win-drivers-installer/build_args/candle_argsx86.txt.in
@@ -9,6 +9,7 @@
 @@INSTALLER_PATH@@\Drivers\vioscsi\*.wxs
 @@INSTALLER_PATH@@\Drivers\vioserial\*.wxs
 @@INSTALLER_PATH@@\Drivers\viostor\*.wxs
+@@INSTALLER_PATH@@\Drivers\viofs\*.wxs
 -out wixobjx86\
 -nologo
 -pedantic
