add viogpudo to the project
Signed-off-by: Vadim Rozenfeld <vrozenfe@redhat.com>

--- a/virtio-win-drivers-installer/build_args/candle_argsx86.txt.in
+++ b/virtio-win-drivers-installer/build_args/candle_argsx86.txt.in
@@ -10,6 +10,7 @@
 @@INSTALLER_PATH@@\Drivers\vioserial\*.wxs
 @@INSTALLER_PATH@@\Drivers\viostor\*.wxs
 @@INSTALLER_PATH@@\Drivers\viofs\*.wxs
+@@INSTALLER_PATH@@\Drivers\viogpudo\*.wxs
 -out wixobjx86\
 -nologo
 -pedantic
