--- a/virtio-win-drivers-installer/build_args/candle_argsx64.txt.in
+++ b/virtio-win-drivers-installer/build_args/candle_argsx64.txt.in
@@ -10,6 +10,7 @@
 @@INSTALLER_PATH@@\Drivers\vioserial\*.wxs
 @@INSTALLER_PATH@@\Drivers\viostor\*.wxs
 @@INSTALLER_PATH@@\Drivers\viofs\*.wxs
+@@INSTALLER_PATH@@\Drivers\viogpudo\*.wxs
 -out wixobjx64\
 -nologo
 -pedantic
