--- a/virtio-win-drivers-installer/constants.wxi.in
+++ b/virtio-win-drivers-installer/constants.wxi.in
@@ -21,7 +21,7 @@
 <?define condition_w8x86 = '(VersionNT = 602 AND VersionNT <> VersionNT64 AND MsiNTProductType = 1)' ?>
 <?define condition_w81x64 = '(REGISTRY_PRODUCT_NAME >< "8.1" AND VersionNT = VersionNT64 AND MsiNTProductType = 1)' ?>
 <?define condition_w81x86 = '(REGISTRY_PRODUCT_NAME >< "8.1" AND VersionNT <> VersionNT64 AND MsiNTProductType = 1)' ?>
-<?define condition_w10x64 = '(REGISTRY_PRODUCT_NAME >< "Windows 10" AND VersionNT = VersionNT64 AND MsiNTProductType = 1)' ?>
+<?define condition_w10x64 = '(REGISTRY_PRODUCT_NAME >< "Windows 10"  NOT REGISTRY_CURRENT_BUILD_NUMBER <> "22000" AND VersionNT = VersionNT64 AND MsiNTProductType = 1)' ?>
 <?define condition_w10x86 = '(REGISTRY_PRODUCT_NAME >< "Windows 10" AND VersionNT <> VersionNT64 AND MsiNTProductType = 1)' ?>
-<?define condition_w11x64 = '(REGISTRY_PRODUCT_NAME >< "Windows 11" AND VersionNT = VersionNT64 AND MsiNTProductType = 1)' ?>
+<?define condition_w11x64 = '(REGISTRY_PRODUCT_NAME >< "Windows 10" AND REGISTRY_CURRENT_BUILD_NUMBER >< "22000" AND VersionNT = VersionNT64 AND MsiNTProductType = 1 )' ?>
 </Include>
