--- a/virtio-win-drivers-installer/build_args/candle_argsx86.txt.in
+++ b/virtio-win-drivers-installer/build_args/candle_argsx86.txt.in
@@ -2,7 +2,7 @@
 @@INSTALLER_PATH@@\Drivers\Balloon\*.wxs
 @@INSTALLER_PATH@@\Drivers\NetKVM\*.wxs
 @@INSTALLER_PATH@@\Drivers\pvpanic\*.wxs
-@@INSTALLER_PATH@@\Drivers\qemufwcfg\*.wxs
+@@INSTALLER_PATH@@\Drivers\fwcfg\*.wxs
 @@INSTALLER_PATH@@\Drivers\qemupciserial\*.wxs
 @@INSTALLER_PATH@@\Drivers\vioinput\*.wxs
 @@INSTALLER_PATH@@\Drivers\viorng\*.wxs
