replace difx extension with our own
Signed-off-by: Vadim Rozenfeld <vrozenfe@redhat.com>

--- a/virtio-win-drivers-installer/build_args/candle_argsx64.txt.in
+++ b/virtio-win-drivers-installer/build_args/candle_argsx64.txt.in
@@ -18,6 +18,6 @@
 -v
 -arch x64
 -fips
--ext "@@WIX_BIN_PATH@@WixDifxAppExtension.dll"
 -ext "@@WIX_BIN_PATH@@WixUtilExtension.dll"
 -ext "@@WIX_BIN_PATH@@WixUIExtension.dll"
+-ext "@@WIX_LIB_PATH@@x64\DrvInstExt.dll"
